# open-interactivity-engine

./: .gitignore  .vim_syntax  CMakeLists.txt  Doxyfile  Doxyfile-mcss  README.md  data.sh  index.html  script.json
client/: .babelrc  .gitignore  package.json  webpack.config.js
client/src/: api.js  configureStore.js  index.js  list.js  routes.js  utils.js
client/src/actions/: actionTypes.js  audienceActions.js  campaignsActions.js  contentActions.js  creators.js  languages.js  languagesActions.js  types.js
client/src/components/: audienceIndex.js  audienceList.js  campaignsIndex.js  campaignsList.js  contentIndex.js  contentList.js  languagesIndex.js  languagesList.js  notfound.js  pagination.js  settings.js
client/src/components/audience/: create.js  delete.js  edit.js  index.js  view.js
client/src/components/campaigns/: create.js  delete.js  edit.js  index.js  view.js
client/src/components/content/: create.js  delete.js  edit.js  index.js  view.js
client/src/components/languages/: create.js  delete.js  edit.js  form.js  index.js  view.js
client/src/reducers/: audience.js  audienceReducer.js  campaigns.js  campaignsReducer.js  content.js  contentReducer.js  debug.js  initialState.js  language.js  languages.js  languagesReducer.js  root.js  rootReducer.js
client/src/sagas/: sagas.js
client/src/store/: configure.js  configureStore.js
concept/: index.html
html/: annotated.html  classaudience-members.html  classaudience.html  classcampaigns-members.html  classcampaigns.html  classcontent-members.html  classcontent.html  classdocument.html  classdotenv-members.html  classdotenv.html  classes.html  classlanguages-members.html  classlanguages.html  classops_1_1bson__utils.html  classops_1_1http_1_1request.html  classops_1_1http_1_1server.html  classops_1_1model.html  classops_1_1model__error.html  classops_1_1page.html  classops_1_1property__validator.html  classops_1_1unique__constraint.html  classops_1_1validation__error.html  classops_1_1validator.html  classotp_1_1http_1_1request.html  classotp_1_1http_1_1server.html  classotp_1_1model.html  classotp_1_1model__error.html  classotp_1_1page.html  classotp_1_1property__validator.html  classotp_1_1unique__constraint.html  classotp_1_1validation__error.html  classotp_1_1validator.html  classserver.html  classsurvey_1_1http_1_1request-members.html  classsurvey_1_1http_1_1request.html  classsurvey_1_1http_1_1response.html  classsurvey_1_1http_1_1server-members.html  classsurvey_1_1http_1_1server.html  classsurvey_1_1model-members.html  classsurvey_1_1model.html  (+54 more)
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  files_0.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js
mockup/: index.html
mockup/audience/: index.html
mockup/campaigns/: index.html
mockup/content/: index.html
mockup/languages/: index.html
mockup/settings/: index.html
presentation/: index.html
presentation/js/: reveal.min.js
src/: builder.h  controller.h  dotenv.h  main.cpp  model.h  namespace.h  ops.h  server.cpp  server.h  utils.cpp  utils.h
src/builder/: document.h  exception.cpp  exception.h
src/core/builders/: adapter.cpp  adapter.h  audience.cpp  audience.h  campaign.cpp  campaign.h  content.cpp  content.h  country.cpp  country.h  feature.cpp  feature.h  language.cpp  language.h  media.cpp  media.h  rep.cpp  rep.h
src/core/controllers/: audience.cpp  audience.h  campaigns.cpp  campaigns.h  content.cpp  content.h  countries.cpp  countries.h  languages.cpp  languages.h  media.cpp  media.h
src/core/models/: adapter.cpp  adapter.h  audience.cpp  audience.h  campaign.cpp  campaign.h  content.cpp  content.h  country.cpp  country.h  feature.cpp  feature.h  language.cpp  language.h  media.cpp  media.h  rep.cpp  rep.h
src/dotenv/: dotenv.h
src/model/: exception.cpp  exception.h  property_validator.cpp  property_validator.h  validator.cpp  validator.h
src/model/validators/: error.cpp  error.h  exception.h  property_validator.cpp  property_validator.h  unique_constraint.cpp  unique_constraint.h
src/nexmo/: controller.cpp  controller.h  ivr.cpp  ivr.h  nexmo_voice.cpp  nexmo_voice.h  script_runner.cpp  script_runner.h  session_builder.h
src/nexmo/adapters/: nexmo_voice.cpp  nexmo_voice.h
src/nexmo/builders/: session_builder.cpp  session_builder.h
src/nexmo/controllers/: nexmo_controller.cpp  nexmo_controller.h
src/nexmo/models/: session.cpp  session.h
src/ops/: adapter.cpp  adapter.h
src/ops/builders/: adapter.cpp  adapter.h  audience.cpp  audience.h  campaign.cpp  campaign.h  content.cpp  content.h  country.h  feature.cpp  feature.h  language.cpp  language.h  media.cpp  media.h  rep.cpp  rep.h
src/ops/controllers/: audience.cpp  audience.h  campaigns.cpp  campaigns.h  content.cpp  content.h  countries.cpp  countries.h  languages.cpp  languages.h  media.cpp  media.h
src/ops/http/: server.cpp  server.h
src/ops/http/rest/: controller.cpp  controller.h  server.cpp  server.h
src/ops/mongodb/: counter.cpp  counter.h  document.cpp  document.h  model.h  page.cpp  page.h  pool.cpp  pool.h
src/ops/mongodb/bson/: builder.cpp  builder.h
src/ops/util/: json.cpp  json.h
src/twilio/adapters/: twilio_voice.cpp  twilio_voice.h
src/twilio/controllers/: twilio_controller.cpp  twilio_controller.h
src/twilio/models/: session.cpp  session.h
src/utils/: bson.cpp  bson.h
test/: CMakeLists.txt  main.cpp
